--- a/WPFApplication/MainWindow.xaml
+++ b/WPFApplication/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFApplication"
         xmlns:cvr="clr-namespace:WPFApplication.Converters"
-        xmlns:model="clr-namespace:FileMonitorService;assembly=FileMonitorService"
+        xmlns:model="clr-namespace:FileMonitorService.JsonService;assembly=FileMonitorService"
         mc:Ignorable="d"
         DataContext="{Binding Source={StaticResource Locator}, Path=MainWindowVM}"
         Title="JSON Monitor"
